#Devcon: Modified perioddeatils and heatmap for performance

--- a/src/pages/perioddetails/perioddetails.html
+++ b/src/pages/perioddetails/perioddetails.html
@@ -5,8 +5,7 @@
     </ion-title>
     <ion-title *ngIf="associations">{{associations}}</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="openModal()">
-      </button>
+      <button ion-button icon-only (click)="openModal()"></button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
